# deeplotyper

./: .coveragerc  .gitignore  .readthedocs.yaml  README.md  pyproject.toml  pytest.ini  requirements.txt  setup.py
.github/workflows/: ci.yml  python-publish.yml
docs/: Makefile
docs/source/: api.rst  conf.py  deeplotyper.alignment_utils.rst  deeplotyper.coordinate_utils.rst  deeplotyper.data_models.rst  deeplotyper.extras.ensembl_sequence_fetcher.rst  deeplotyper.extras.ncbi_data_fetcher.rst  deeplotyper.extras.rst  deeplotyper.mapper.rst  deeplotyper.orf_utils.rst  deeplotyper.remapper.rst  deeplotyper.rst  deeplotyper.vcf_haploevents.rst  extras.ensembl_sequence_fetcher.rst  extras.ncbi_data_fetcher.rst  extras.rst  index.rst  modules.rst
docs/source/_autosummary/: deeplotyper.alignment_utils.rst  deeplotyper.coordinate_utils.rst  deeplotyper.data_models.rst  deeplotyper.extras.ensembl_sequence_fetcher.rst  deeplotyper.extras.ncbi_data_fetcher.rst  deeplotyper.extras.rst  deeplotyper.mapper.rst  deeplotyper.orf_utils.rst  deeplotyper.remapper.rst  deeplotyper.rst  deeplotyper.vcf_haploevents.rst
src/: __init__.py
src/deeplotyper/: __init__.py  alignment_utils.py  coordinate_utils.py  data_models.py  mapper.py  orf_utils.py  remapper.py  vcf_haploevents.py
src/deeplotyper/extras/: ensembl_sequence_fetcher.py  ncbi_data_fetcher.py
tests/: test_alignment_utils.py  test_coordinate_utils.py  test_deeplotyper.py  test_ensembl_sequence_fetcher.py  test_ncbi_data_fetcher.py  test_remapper.py  test_remapper_edgecases.py  test_vcf_haploevents.py
