[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]                        # PEP 621 metadata
name = "deeplotyper"
version = "0.1.1"
description = "cDNA⇄genomic mapping and haplotype remapping tools"
readme = "README.md"
license = {file = "LICENSE"}
authors = [{name="Eli Niktab", email="maniktab@gmail.com"}]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Environment :: GPU :: NVIDIA CUDA :: 12 :: 12.4",
    "Topic :: Scientific/Engineering :: Bio-Informatics"
]
keywords = ["vcf", "coordinate", "haplotype", "graph", "protein", "isoform"]
requires-python = ">=3.8"
dependencies = [
  "biopython>=1.78",
  "pysam>=0.19"
]

[project.urls]
#"Documentation" = "https://your-docs-host.io"
"Source"        = "https://github.com/eniktab/deeplotyper"
"Tracker"       = "https://github.com/eniktab/deeplotyper/issues"

[tool.setuptools.packages.find]
where = ["src"]

[project.optional-dependencies]
dev = [
  "pytest>=6.0",
  "sphinx>=4.0",
  "sphinx-autodoc-typehints",
  "sphinx_rtd_theme",
  "flake8",
  "mypy",
]